--- a/来自研二学长的一些学习资料.md
+++ b/来自研二学长的一些学习资料.md
@@ -124,4 +124,4 @@ https://www.jianshu.com/p/b03a8d7b1719
 
 推荐的markdown编辑器：atom
 
-最后说一句，最好也学习一下图像处理的相关知识，比如滤波、腐蚀、膨胀、高斯金字塔、图像的傅里叶变换、图像的特征提取等。自己上网查资料或者看数字图像处理那本书都可以。
+最后说一句，最好也学习一下图像处理的相关知识，比如滤波、腐蚀、膨胀、高斯金字塔、图像的傅里叶变换、图像的特征提取等。自己上网查资料或者看数字图像处理那本书都可以。其实我觉得计算机视觉还挺有意思的，加油吧。
