--- a/计算机视觉的一些学习资料.md
+++ b/计算机视觉的一些学习资料.md
@@ -62,7 +62,10 @@ https://arxiv.org/pdf/1311.2524v5.pdf
 https://arxiv.org/pdf/1504.08083.pdf
 
 - Faster RCNN
-https://arxiv.org/pdf/1506.01497v3.pdf
+https://arxiv.org/pdf/1506.01497v3.pdf  
+>关于在Ubuntu下训练自己的数据集（caffe）  
+环境配置：https://blog.csdn.net/lucifer_24/article/details/80392166  
+训练自己的数据集：https://blog.csdn.net/sinat_30071459/article/details/51332084
 
 - SPP-net
 https://arxiv.org/abs/1406.4729
@@ -74,8 +77,11 @@ https://arxiv.org/abs/1605.06409
 https://arxiv.org/abs/1612.03144
 
 - Yolov1-v3
-https://blog.csdn.net/dQCFKyQDXYm3F8rB0/article/details/80571270
-http://www.mamicode.com/info-detail-2314392.html
+https://blog.csdn.net/dQCFKyQDXYm3F8rB0/article/details/80571270  
+http://www.mamicode.com/info-detail-2314392.html  
+>Yolov3训练自己的数据集（darknet)：
+https://blog.csdn.net/lilai619/article/details/79695109  
+Yolov3官网：https://pjreddie.com/darknet/yolo  
 
 - SSD
 https://arxiv.org/abs/1512.02325
@@ -124,4 +130,5 @@ https://www.jianshu.com/p/b03a8d7b1719
 
 推荐的markdown编辑器：atom
 
-最后说一句，最好也学习一下图像处理的相关知识，比如滤波、腐蚀、膨胀、高斯金字塔、图像的傅里叶变换、图像的特征提取等。自己上网查资料或者看数字图像处理那本书都可以。其实我觉得计算机视觉还挺有意思的，加油吧。
+最后说一句，最好也学习一下图像处理的相关知识，比如滤波、腐蚀、膨胀、高斯金字塔、图像的傅里叶变换、图像的特征提取等。自己上网查资料或者看数字图像处理那本书都可以。
+## 加油吧！
